--- a/OpenCamera/src/main/res/layout/camera.xml
+++ b/OpenCamera/src/main/res/layout/camera.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2014 The Android Open Source Project.
   ~
   ~        yinglovezhuzhu@gmail.com
@@ -18,28 +17,34 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera"
-        android:background="@drawable/camera_background"
-        android:id="@+id/camera"
-        android:orientation="horizontal"
+    android:id="@+id/camera"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/camera_background"
+    android:orientation="horizontal">
+
+    <com.opensource.opencamera.PreviewFrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <com.opensource.opencamera.PreviewFrameLayout android:id="@+id/frame_layout"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="2dp"
+        android:layout_weight="1">
+
+        <FrameLayout
+            android:id="@+id/frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="2dp"
-            android:layout_weight="1">
-        <FrameLayout android:id="@+id/frame"
+            android:background="@drawable/border_view_finder">
+
+            <SurfaceView
+                android:id="@+id/camera_preview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/border_view_finder">
-            <SurfaceView android:id="@+id/camera_preview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
+
             <com.opensource.opencamera.FocusRectangle
-                    android:id="@+id/focus_rectangle"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                android:id="@+id/focus_rectangle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
         </FrameLayout>
     </com.opensource.opencamera.PreviewFrameLayout>
 </LinearLayout>
