--- a/OpenCamera/src/main/res/xml/camera_preferences.xml
+++ b/OpenCamera/src/main/res/xml/camera_preferences.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2014 The Android Open Source Project.
   ~
   ~        yinglovezhuzhu@gmail.com
@@ -17,70 +16,68 @@
   ~ limitations under the License.
   -->
 
-<PreferenceGroup
-        xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera" >
-    <PreferenceGroup
-            camera:title="@string/pref_camera_settings_category">
+<PreferenceGroup xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera">
+    <PreferenceGroup camera:title="@string/pref_camera_settings_category">
         <IconListPreference
-                camera:key="pref_camera_flashmode_key"
-                camera:defaultValue="@string/pref_camera_flashmode_default"
-                camera:title="@string/pref_camera_flashmode_title"
-                camera:icons="@array/pref_camera_flashmode_icons"
-                camera:largeIcons="@array/flashmode_icons"
-                camera:entries="@array/pref_camera_flashmode_entries"
-                camera:entryValues="@array/pref_camera_flashmode_entryvalues" />
+            camera:defaultValue="@string/pref_camera_flashmode_default"
+            camera:entries="@array/pref_camera_flashmode_entries"
+            camera:entryValues="@array/pref_camera_flashmode_entryvalues"
+            camera:icons="@array/pref_camera_flashmode_icons"
+            camera:key="pref_camera_flashmode_key"
+            camera:largeIcons="@array/flashmode_icons"
+            camera:title="@string/pref_camera_flashmode_title" />
         <ListPreference
-                camera:key="pref_camera_exposure_key"
-                camera:defaultValue="@string/pref_exposure_default"
-                camera:title="@string/pref_exposure_title" />
+            camera:defaultValue="@string/pref_exposure_default"
+            camera:key="pref_camera_exposure_key"
+            camera:title="@string/pref_exposure_title" />
         <ListPreference
-                camera:key="pref_camera_scenemode_key"
-                camera:defaultValue="@string/pref_camera_scenemode_default"
-                camera:title="@string/pref_camera_scenemode_title"
-                camera:entries="@array/pref_camera_scenemode_entries"
-                camera:entryValues="@array/pref_camera_scenemode_entryvalues" />
+            camera:defaultValue="@string/pref_camera_scenemode_default"
+            camera:entries="@array/pref_camera_scenemode_entries"
+            camera:entryValues="@array/pref_camera_scenemode_entryvalues"
+            camera:key="pref_camera_scenemode_key"
+            camera:title="@string/pref_camera_scenemode_title" />
         <IconListPreference
-                camera:key="pref_camera_whitebalance_key"
-                camera:defaultValue="@string/pref_camera_whitebalance_default"
-                camera:title="@string/pref_camera_whitebalance_title"
-                camera:icons="@array/pref_camera_whitebalance_icons"
-                camera:largeIcons="@array/whitebalance_icons"
-                camera:entries="@array/pref_camera_whitebalance_entries"
-                camera:entryValues="@array/pref_camera_whitebalance_entryvalues" />
+            camera:defaultValue="@string/pref_camera_whitebalance_default"
+            camera:entries="@array/pref_camera_whitebalance_entries"
+            camera:entryValues="@array/pref_camera_whitebalance_entryvalues"
+            camera:icons="@array/pref_camera_whitebalance_icons"
+            camera:key="pref_camera_whitebalance_key"
+            camera:largeIcons="@array/whitebalance_icons"
+            camera:title="@string/pref_camera_whitebalance_title" />
         <ListPreference
-                camera:key="pref_camera_coloreffect_key"
-                camera:defaultValue="@string/pref_camera_coloreffect_default"
-                camera:title="@string/pref_camera_coloreffect_title"
-                camera:entries="@array/pref_camera_coloreffect_entries"
-                camera:entryValues="@array/pref_camera_coloreffect_entryvalues" />
+            camera:defaultValue="@string/pref_camera_coloreffect_default"
+            camera:entries="@array/pref_camera_coloreffect_entries"
+            camera:entryValues="@array/pref_camera_coloreffect_entryvalues"
+            camera:key="pref_camera_coloreffect_key"
+            camera:title="@string/pref_camera_coloreffect_title" />
         <RecordLocationPreference
-                camera:key="pref_camera_recordlocation_key"
-                camera:defaultValue="@string/pref_camera_recordlocation_default"
-                camera:title="@string/pref_camera_recordlocation_title"
-                camera:icons="@array/pref_camera_recordlocation_icons"
-                camera:largeIcons="@array/recordlocation_icons"
-                camera:entries="@array/pref_camera_recordlocation_entries"
-                camera:entryValues="@array/pref_camera_recordlocation_entryvalues" />
+            camera:defaultValue="@string/pref_camera_recordlocation_default"
+            camera:entries="@array/pref_camera_recordlocation_entries"
+            camera:entryValues="@array/pref_camera_recordlocation_entryvalues"
+            camera:icons="@array/pref_camera_recordlocation_icons"
+            camera:key="pref_camera_recordlocation_key"
+            camera:largeIcons="@array/recordlocation_icons"
+            camera:title="@string/pref_camera_recordlocation_title" />
         <ListPreference
-                camera:key="pref_camera_picturesize_key"
-                camera:title="@string/pref_camera_picturesize_title"
-                camera:entries="@array/pref_camera_picturesize_entries"
-                camera:entryValues="@array/pref_camera_picturesize_entryvalues" />
+            camera:entries="@array/pref_camera_picturesize_entries"
+            camera:entryValues="@array/pref_camera_picturesize_entryvalues"
+            camera:key="pref_camera_picturesize_key"
+            camera:title="@string/pref_camera_picturesize_title" />
         <ListPreference
-                camera:key="pref_camera_jpegquality_key"
-                camera:defaultValue="@string/pref_camera_jpegquality_default"
-                camera:title="@string/pref_camera_jpegquality_title"
-                camera:entries="@array/pref_camera_jpegquality_entries"
-                camera:entryValues="@array/pref_camera_jpegquality_entryvalues" />
+            camera:defaultValue="@string/pref_camera_jpegquality_default"
+            camera:entries="@array/pref_camera_jpegquality_entries"
+            camera:entryValues="@array/pref_camera_jpegquality_entryvalues"
+            camera:key="pref_camera_jpegquality_key"
+            camera:title="@string/pref_camera_jpegquality_title" />
         <ListPreference
-                camera:key="pref_camera_focusmode_key"
-                camera:defaultValue="@string/pref_camera_focusmode_default"
-                camera:title="@string/pref_camera_focusmode_title"
-                camera:entries="@array/pref_camera_focusmode_entries"
-                camera:entryValues="@array/pref_camera_focusmode_entryvalues" />
+            camera:defaultValue="@string/pref_camera_focusmode_default"
+            camera:entries="@array/pref_camera_focusmode_entries"
+            camera:entryValues="@array/pref_camera_focusmode_entryvalues"
+            camera:key="pref_camera_focusmode_key"
+            camera:title="@string/pref_camera_focusmode_title" />
         <IconListPreference
-                camera:key="pref_camera_id_key"
-                camera:defaultValue="@string/pref_camera_id_default"
-                camera:title="@string/pref_camera_id_title" />
+            camera:defaultValue="@string/pref_camera_id_default"
+            camera:key="pref_camera_id_key"
+            camera:title="@string/pref_camera_id_title" />
     </PreferenceGroup>
 </PreferenceGroup>
