--- a/OpenCamera/src/main/res/xml/video_preferences.xml
+++ b/OpenCamera/src/main/res/xml/video_preferences.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2014 The Android Open Source Project.
   ~
   ~        yinglovezhuzhu@gmail.com
@@ -17,42 +16,40 @@
   ~ limitations under the License.
   -->
 
-<PreferenceGroup
-        xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera" >
-    <PreferenceGroup
-            camera:title="@string/pref_camcorder_settings_category">
+<PreferenceGroup xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera">
+    <PreferenceGroup camera:title="@string/pref_camcorder_settings_category">
         <IconListPreference
-                camera:key="pref_video_quality_key"
-                camera:defaultValue="@string/pref_video_quality_default"
-                camera:title="@string/pref_video_quality_title"
-                camera:largeIcons="@array/video_quality_icons"
-                camera:entries="@array/pref_video_quality_entries"
-                camera:entryValues="@array/pref_video_quality_entryvalues"/>
+            camera:defaultValue="@string/pref_video_quality_default"
+            camera:entries="@array/pref_video_quality_entries"
+            camera:entryValues="@array/pref_video_quality_entryvalues"
+            camera:key="pref_video_quality_key"
+            camera:largeIcons="@array/video_quality_icons"
+            camera:title="@string/pref_video_quality_title" />
         <IconListPreference
-                camera:key="pref_camera_video_flashmode_key"
-                camera:defaultValue="@string/pref_camera_video_flashmode_default"
-                camera:title="@string/pref_camera_flashmode_title"
-                camera:icons="@array/pref_camera_video_flashmode_icons"
-                camera:largeIcons="@array/video_flashmode_icons"
-                camera:entries="@array/pref_camera_video_flashmode_entries"
-                camera:entryValues="@array/pref_camera_video_flashmode_entryvalues"/>
+            camera:defaultValue="@string/pref_camera_video_flashmode_default"
+            camera:entries="@array/pref_camera_video_flashmode_entries"
+            camera:entryValues="@array/pref_camera_video_flashmode_entryvalues"
+            camera:icons="@array/pref_camera_video_flashmode_icons"
+            camera:key="pref_camera_video_flashmode_key"
+            camera:largeIcons="@array/video_flashmode_icons"
+            camera:title="@string/pref_camera_flashmode_title" />
         <IconListPreference
-                camera:key="pref_camera_whitebalance_key"
-                camera:defaultValue="@string/pref_camera_whitebalance_default"
-                camera:title="@string/pref_camera_whitebalance_title"
-                camera:icons="@array/pref_camera_whitebalance_icons"
-                camera:largeIcons="@array/whitebalance_icons"
-                camera:entries="@array/pref_camera_whitebalance_entries"
-                camera:entryValues="@array/pref_camera_whitebalance_entryvalues"/>
+            camera:defaultValue="@string/pref_camera_whitebalance_default"
+            camera:entries="@array/pref_camera_whitebalance_entries"
+            camera:entryValues="@array/pref_camera_whitebalance_entryvalues"
+            camera:icons="@array/pref_camera_whitebalance_icons"
+            camera:key="pref_camera_whitebalance_key"
+            camera:largeIcons="@array/whitebalance_icons"
+            camera:title="@string/pref_camera_whitebalance_title" />
         <ListPreference
-                camera:key="pref_camera_coloreffect_key"
-                camera:defaultValue="@string/pref_camera_coloreffect_default"
-                camera:title="@string/pref_camera_coloreffect_title"
-                camera:entries="@array/pref_camera_coloreffect_entries"
-                camera:entryValues="@array/pref_camera_coloreffect_entryvalues"/>
+            camera:defaultValue="@string/pref_camera_coloreffect_default"
+            camera:entries="@array/pref_camera_coloreffect_entries"
+            camera:entryValues="@array/pref_camera_coloreffect_entryvalues"
+            camera:key="pref_camera_coloreffect_key"
+            camera:title="@string/pref_camera_coloreffect_title" />
         <IconListPreference
-                camera:key="pref_camera_id_key"
-                camera:defaultValue="@string/pref_camera_id_default"
-                camera:title="@string/pref_camera_id_title" />
+            camera:defaultValue="@string/pref_camera_id_default"
+            camera:key="pref_camera_id_key"
+            camera:title="@string/pref_camera_id_title" />
     </PreferenceGroup>
 </PreferenceGroup>
