--- a/OpenCamera/src/main/res/layout-land/camera_control.xml
+++ b/OpenCamera/src/main/res/layout-land/camera_control.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2014 The Android Open Source Project.
   ~
   ~        yinglovezhuzhu@gmail.com
@@ -18,56 +17,63 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/control_bar"
-        android:orientation="vertical"
-        android:layout_height="match_parent"
-        android:layout_width="76dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="10dp"
-        android:layout_alignParentRight="true">
+    android:id="@+id/control_bar"
+    android:layout_width="76dp"
+    android:layout_height="match_parent"
+    android:layout_alignParentRight="true"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="13dp"
+    android:orientation="vertical">
 
     <com.opensource.opencamera.RotateImageView
-            android:id="@+id/review_thumbnail"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_height="52dp"
-            android:layout_width="52dp"
-            android:clickable="true"
-            android:focusable="false"
-            android:background="@drawable/border_last_picture"/>
+        android:id="@+id/review_thumbnail"
+        android:layout_width="52dp"
+        android:layout_height="52dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/border_last_picture"
+        android:clickable="true"
+        android:focusable="false" />
 
-    <LinearLayout android:id="@+id/camera_switch_set"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_centerInParent="true"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content">
-        <com.opensource.opencamera.RotateImageView android:id="@+id/video_switch_icon"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:src="@drawable/btn_ic_mode_switch_video"/>
-        <com.opensource.opencamera.Switcher android:id="@+id/camera_switch"
-                android:layout_width="wrap_content"
-                android:layout_height="70dp"
-                android:src="@drawable/btn_mode_switch_knob"
-                android:background="@drawable/btn_mode_switch_bg" />
+    <LinearLayout
+        android:id="@+id/camera_switch_set"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical">
+
         <com.opensource.opencamera.RotateImageView
-                android:id="@+id/camera_switch_icon"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_marginBottom="3dp"
-                android:src="@drawable/btn_ic_mode_switch_camera"/>
+            android:id="@+id/video_switch_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/btn_ic_mode_switch_video" />
+
+        <com.opensource.opencamera.Switcher
+            android:id="@+id/camera_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:background="@drawable/btn_mode_switch_bg"
+            android:src="@drawable/btn_mode_switch_knob" />
+
+        <com.opensource.opencamera.RotateImageView
+            android:id="@+id/camera_switch_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:src="@drawable/btn_ic_mode_switch_camera" />
     </LinearLayout>
 
-    <com.opensource.opencamera.ShutterButton android:id="@+id/shutter_button"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:scaleType="center"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/btn_ic_camera_shutter"
-            android:background="@drawable/btn_shutter"/>
+    <com.opensource.opencamera.ShutterButton
+        android:id="@+id/shutter_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/btn_shutter"
+        android:clickable="true"
+        android:focusable="true"
+        android:scaleType="center"
+        android:src="@drawable/btn_ic_camera_shutter" />
 </RelativeLayout>
 
