--- a/OpenCamera/src/main/res/layout/video_camera.xml
+++ b/OpenCamera/src/main/res/layout/video_camera.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (C) 2014 The Android Open Source Project.
   ~
   ~        yinglovezhuzhu@gmail.com
@@ -18,53 +17,63 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:camera="http://schemas.android.com/apk/res/com.opensource.opencamera"
-        android:id="@+id/video_camera"
-        android:background="@drawable/camera_background"
-        android:orientation="horizontal"
+    android:id="@+id/video_camera"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/camera_background"
+    android:orientation="horizontal">
+
+    <com.opensource.opencamera.PreviewFrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <com.opensource.opencamera.PreviewFrameLayout android:id="@+id/frame_layout"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="2dip"
+        android:layout_weight="1">
+
+        <FrameLayout
+            android:id="@+id/frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="2dip"
-            android:layout_weight="1">
-        <FrameLayout android:id="@+id/frame"
+            android:background="@drawable/border_view_finder">
+
+            <SurfaceView
+                android:id="@+id/camera_preview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/video_frame"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/border_view_finder">
-            <SurfaceView android:id="@+id/camera_preview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-            <ImageView android:id="@+id/video_frame"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
-            <com.opensource.opencamera.ui.RotateRecordingTime android:id="@+id/recording_time_rect"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left|bottom"
-                    android:layout_marginBottom="14dp"
-                    android:layout_marginLeft="14dp">
+                android:visibility="gone" />
+
+            <com.opensource.opencamera.ui.RotateRecordingTime
+                android:id="@+id/recording_time_rect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left|bottom"
+                android:layout_marginBottom="14dp"
+                android:layout_marginLeft="14dp">
                 <!-- Note: In this TextView the paddingRight="2"
                      attribute is required because otherwise the
                      text's drop shadow will be clipped. -->
-                <TextView android:id="@+id/recording_time"
-                        android:layout_width="130dp"
-                        android:layout_height="130dp"
-                        android:layout_gravity="center"
-                        android:paddingRight="2dp"
-                        android:drawablePadding="8dp"
-                        android:drawableLeft="@drawable/ic_recording_indicator"
-                        android:shadowColor="#c0000000"
-                        android:shadowDx="1"
-                        android:shadowDy="1"
-                        android:shadowRadius="1"
-                        android:gravity="left|center_vertical"
-                        android:textColor="@color/recording_time_elapsed_text"
-                        android:textSize="23dp"
-                        android:textStyle="bold"
-                        android:visibility="gone"/>
+                <TextView
+                    android:id="@+id/recording_time"
+                    android:layout_width="130dp"
+                    android:layout_height="130dp"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/ic_recording_indicator"
+                    android:drawablePadding="8dp"
+                    android:gravity="left|center_vertical"
+                    android:paddingRight="2dp"
+                    android:shadowColor="#c0000000"
+                    android:shadowDx="1"
+                    android:shadowDy="1"
+                    android:shadowRadius="1"
+                    android:textColor="@color/recording_time_elapsed_text"
+                    android:textSize="23dp"
+                    android:textStyle="bold"
+                    android:visibility="gone" />
             </com.opensource.opencamera.ui.RotateRecordingTime>
         </FrameLayout>
     </com.opensource.opencamera.PreviewFrameLayout>
