--- a/OpenCamcorder_Library/src/main/res/layout/activity_camcorder.xml
+++ b/OpenCamcorder_Library/src/main/res/layout/activity_camcorder.xml
@@ -29,7 +29,6 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="2dip"
         android:layout_weight="1">
-
         <FrameLayout
             android:id="@+id/frame"
             android:layout_width="match_parent"
@@ -74,6 +73,25 @@
                     android:textStyle="bold"
                     android:visibility="gone" />
             </com.opensource.opencamcorder.widget.RotateRecordingTime>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_vertical"
+                android:background="#55000000"
+                android:layout_gravity="left">
+                <com.opensource.opencamcorder.widget.RotateImageView
+                    android:id="@+id/riv_flash_state"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_flash_off"/>
+                <com.opensource.opencamcorder.widget.RotateImageView
+                    android:id="@+id/riv_change_camera"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_switch_video_camera"/>
+            </LinearLayout>
         </FrameLayout>
     </com.opensource.opencamcorder.PreviewFrameLayout>
 </LinearLayout>
