--- a/MagicCamcorder/src/main/res/layout/activity_camcorder.xml
+++ b/MagicCamcorder/src/main/res/layout/activity_camcorder.xml
@@ -21,5 +21,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <SurfaceView
+        android:id="@+id/sv_camcorder_preview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    <Button
+        android:id="@+id/btn_recorder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Record"/>
 </LinearLayout>
